gitignore Builds folder

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ doxygen/doc
 src/Blooper/Builds/VisualStudio2015/Blooper.vcxproj
 src/Blooper/Builds/VisualStudio2015/Blooper.vcxproj.filters
 src/Blooper/Builds/MacOSX/Blooper.xcodeproj/project.pbxproj
+src/Blooper/Builds/
