--- a/.travis.yml
+++ b/.travis.yml
@@ -57,16 +57,16 @@ install:
 script:
 
     - if [ "$TARGET" == "linux" ]|| [ "$TARGET" == "linuxarmv6" ] || [ "$TARGET" == "linuxarmv7" ]; then
-        python src/LGML/Scripts/linux/buildScript.py --build;
+        python src/LGML/Scripts/linux/buildScript.py --build --beta;
       elif [ "$TARGET" == "osx" ] ; then
-        python src/LGML/Scripts/osx/buildScript.py --build;
+        python src/LGML/Scripts/osx/buildScript.py --build --beta;
       fi
 
 after_success:
   - if [ "$TARGET" == "linux" ]|| [ "$TARGET" == "linuxarmv6" ] || [ "$TARGET" == "linuxarmv7" ]; then
-        sh src/LGML/Scripts/linux/installExportDeps.sh && python src/LGML/Scripts/linux/buildScript.py --export --beta;
+        sh src/LGML/Scripts/linux/installExportDeps.sh && python src/LGML/Scripts/linux/buildScript.py --export;
     elif [ "$TARGET" == "osx" ] ; then
-        sh src/LGML/Scripts/osx/installExportDeps.sh && python src/LGML/Scripts/osx/buildScript.py --export --beta;
+        sh src/LGML/Scripts/osx/installExportDeps.sh && python src/LGML/Scripts/osx/buildScript.py --export;
     fi
 
 git:
