--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ matrix:
   # fully specify builds, include can't dynamically expand matrix entries
   # relative order of sudo and env is important so that addons: is recognized
 
-  # - os: linux
-  #   dist: trusty
-  #   sudo: required
-  #   env: TARGET="linux"
+  - os: linux
+    dist: trusty
+    sudo: required
+    env: TARGET="linux"
   #   addons:
   #     apt:
   #       sources:
@@ -63,10 +63,11 @@ script:
 
 after_success:
   - if [ "$TARGET" == "linux" ]|| [ "$TARGET" == "linuxarmv6" ] || [ "$TARGET" == "linuxarmv7" ]; then
-        sh src/LGML/Scripts/linux/installExportDeps.sh && python src/LGML/Scripts/linux/buildScript.py --export;
+        sh src/LGML/Scripts/linux/installExportDeps.sh 
     elif [ "$TARGET" == "osx" ] ; then
-        sh src/LGML/Scripts/osx/installExportDeps.sh && python src/LGML/Scripts/osx/buildScript.py --export;
+        sh src/LGML/Scripts/osx/installExportDeps.sh 
     fi
+  - python src/LGML/Scripts/buildScript.py --export --os=$TARGET;
 
 git:
   depth: 1
