--- a/.travis.yml
+++ b/.travis.yml
@@ -39,14 +39,14 @@ matrix:
   #       - ~/rpi2_toolchain
 
 
-  # - os: osx
-  #   osx_image: xcode8
-  #   compiler: clang
-  #   env: TARGET="osx"
-  #   cache:
-  #     directories:
-  #       - ~/Dev
-  #       - ~/SDKs
+  - os: osx
+    osx_image: xcode8
+    compiler: clang
+    env: TARGET="osx"
+    cache:
+      directories:
+        - ~/Dev
+        - ~/SDKs
 
 
 
