--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,8 @@ build_job:
   stage: build
   script:
     - "echo installDeps"
-    - "sh src/LGML/Scripts/export_platform_vars.sh && sh src/LGML/Scripts/$LGML_PLATFORM_TYPE/installDeps.sh;"
+    - "source src/LGML/Scripts/export_platform_vars.sh"
+    - "sh src/LGML/Scripts/$LGML_PLATFORM_TYPE/installDeps.sh;"
     - "python src/LGML/Scripts/buildScript.py --build --beta"
 
 test_job:
